<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="right"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gis_gereja_semarang"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorText"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="177dp"
        android:background="@color/sweetPotato"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/johanes_adrian"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sistem_komputer"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/stekom"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="126dp"
            android:text="@string/aplikasi_desc"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center"
            android:textColor="@color/colorText"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/ver_1_0"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Color_7"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout2"
        android:src="@drawable/logo"
        tools:ignore="ContentDescription,ObsoleteLayoutParam,RtlHardcoded"
        android:contentDescription="" />
</LinearLayout>