<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sweetPotato"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context="com.johanes.menu.InputData">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/tv_menu_input"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:id="@+id/tvInputData"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:gravity="center"
            android:background="@color/Color_3" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutNamaGereja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">



            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextNamaGereja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_namaGereja"
                android:inputType="text|textPersonName"
                android:maxLines="1"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutAlamatGereja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextAlamatGereja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:hint="@string/hint_alamatGereja" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutDescGereja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextDescGereja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_deskripsiGereja"
                android:inputType="text|textMultiLine"
                android:maxLines="1"
                android:textColor="@android:color/white" />


        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonUploadImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv_uploadGambar">

        </android.support.v7.widget.AppCompatButton>

        <android.support.v7.widget.AppCompatTextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPicAddress"
            android:layout_weight="1"
            tools:ignore="HardcodedText" />

        <ImageView
            android:layout_width="100sp"
            app:srcCompat="@android:drawable/ic_dialog_map"
            android:id="@+id/uploadedImage"
            tools:ignore="ContentDescription"
            android:background="@color/Color_3"
            android:layout_height="100sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonAddGereja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/button_add_data" />

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>
